payment part done

--- a/cart.html
+++ b/cart.html
@@ -55,8 +55,8 @@
                 </div>
         </div>
 
-    <button  class="vikas_proceed">PROCEED TO CHECKOUT</button>
-    <button class="vikas_proceed">CONTINUE SHOPPING</button>
+   <a href="checkout.html"> <button  class="vikas_proceed">PROCEED TO CHECKOUT</button></a>
+   <a href=""><button class="vikas_proceed">CONTINUE SHOPPING</button></a>
 
    </div>
 </div>
