import navbar and footer

--- a/homepage.html
+++ b/homepage.html
@@ -4,51 +4,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HOME PAGE</title>
-    <link rel="stylesheet" href="./styles/homepage.css">
+    <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
     <div id="first_header">
         <h3>Delivering in Mumbai, Delhi and Gurugram | Same day delivery!</h3>
     </div>
+
+    <!-- Navbar -->
+
     <div id="navbar">
-        <Div id="left">
-        <div class="dropdown">
-            <span>SHOP</span>
-            <div class="dropdown-content">
-                <p>ALL FRUITS</p>
-                <p>ALL VEGGIES</p>
-                <p>FRESH CUTS</p>
-                <p>GIFTS BY KIMAYE</p>
-                <p>COMMUNITY BUYING</p>
-            </div>
-        </div>
-        <div class="learn-dropdown">
-            <span>LEARN</span>
-        
-        <div class="learn-content">
-            <p>OUR STORY</p>
-            <p>WHY KIMAYE</p>
-            <p>TRACEABILITY</p>
-            <p>BEYOND FRUITS</p>
-        </div>
-    </div>
-    <a href="">GROW</a>
-    </Div>
-    <div id="logo">
-        <img src="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/website-logo_400x.png?v=1596288204" alt="logo">
-    </div>
-    <div id="right">
-        <div id="location">
-            <img src="https://cdn.icon-icons.com/icons2/2642/PNG/512/google_map_location_logo_icon_159350.png" alt="">
-            <p>Mumbai</p>
-        </div>
-        <img id="search" src="https://assets.stickpng.com/thumbs/585e4ad1cb11b227491c3391.png" alt="">
-        <img id="profile" src="https://i.pinimg.com/originals/3f/94/70/3f9470b34a8e3f526dbdb022f9f19cf7.jpg" alt="">
-        <img src="https://www.pngkey.com/png/full/154-1547182_bag-clipart-logo-png-shopping-bag-icon-png.png" alt="">
 
     </div>
 
-    </div>
+         <!-- Narbar end -->
+
     <div id="banner">
         <img src="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/grow_by_kimaye.jpg?v=1609401696" alt="">
     </div>
@@ -157,14 +127,26 @@
     </div>
 </div>
 <div id="jazz">
-    <h1>JAZZ IT UP WITH FRUITS</h1>
+    <h1 id="jazz_tit">JAZZ IT UP WITH FRUITS</h1>
+<div id="bx1">
     <div id="p1">
-        
+        <h1>Top Fruits Safety Tips You Should Be Swearing By Every Time You Consume Them.</h1>
+        <p>Fresh fruits bring with them a horde of health benifits, but it's the way we consume them that is...</p>
+
     </div>
     <div id="p2">
-         <p>abhi push ho ja bhai</p>
+       <h1>Fruits Rich In Vitamin C That You Should Be Eating Everyday</h1>
+        <p>Remember the times when our mothers used to chase us every day with a bowl of fruits when we...</p>
     </div>
+</div>
+</div>
+
+
+<!-- Footer -->
+
+<div id="footer">
+   
 </div>
 </body>
 </html>
-<script src="./homapage/homepage.js"></script>
+<script src="homepage.js" type="module"></script>
