--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <link rel="stylesheet" href="homepage.css">
 </head>
 <body>
-    <div id="first_header">
+    <!-- <div id="first_header">
         <h3>Delivering in Mumbai, Delhi and Gurugram | Same day delivery!</h3>
-    </div>
+    </div> -->
 
     <!-- Navbar -->
 
     <div id="navbar">
 
+        
     </div>
 
          <!-- Narbar end -->
-
+<!-- <a href="./cart.html"></a> -->
     <div id="banner">
         <img src="https://cdn.shopify.com/s/files/1/0449/5225/6667/files/grow_by_kimaye.jpg?v=1609401696" alt="">
     </div>
@@ -150,3 +151,10 @@
 </body>
 </html>
 <script src="homepage.js" type="module"></script>
+
+<script>
+    document.querySelector("button").addEventListener('click', () => {
+    window.location.href = './all fruits.html';
+    // console.log('fagh');
+})
+</script>
