--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
 </head>
 
 <body>
-
     <div id="back">
         <div id="login_layout">
             <div class="signin_topbar">
@@ -251,7 +250,7 @@
 
 
             if (email === all_users.email && password === all_users.password) {
-                alert("logged in ");
+                alert("login successful!");
                 window.location.reload();
             } else {
                 alert("invalid Email or Password")
